# Face_Hand_Landmark_Emotion

./: README.md  app.py  app1.py  pyproject.toml
model/face_detection/pretrain/: README.txt
model/facial_expresion_recognition/pretrain/: README.txt
src/pretrain_models/: yunet.py
src/track_landmark/: track.py
